k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: offline-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - offline.essor.cloud
    secretName: offline-tls-cert
  rules:
  - host: offline.essor.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: offline-flask
            port:
              number: 80
